samples/_failures_safe/1761083946_9ce114_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c071b6f8.c: In function ‘main’:
./samples/SAFE/__tmp_c071b6f8.c:167:56: error: missing terminating " character
  167 |     printf("%-12s %-12s %-8s %-8s\n", "Type", "Value", "Line
      |                                                        ^~~~~
./samples/SAFE/__tmp_c071b6f8.c:167:5: error: expected expression at end of input
  167 |     printf("%-12s %-12s %-8s %-8s\n", "Type", "Value", "Line
      |     ^~~~~~
./samples/SAFE/__tmp_c071b6f8.c:167:5: error: expected declaration or statement at end of input
